--- a/static/src/components/styles/default.scss
+++ b/static/src/components/styles/default.scss
@@ -9,14 +9,23 @@ $secondary-light-blue: #ddedf4;
 $neutrals-almost-black: #212121;
 $neutrals-grey: #b3b6ba;
 $neutrals-dark-grey: #7a7a7a;
+$neutrals-ligth-grey: #f0f0f1;
 
+$grapefruit-pink: #d67586;
+$pink: #cc81b6;
+
+$purple: #9e7cbf;
+
+$cornflow-blue: #74a6e7;
+
+$winter-green: #7cb4bf;
 * {
-  margin: 0;
-  padding: 0;
-  outline: none !important;
-  border: none;
-  background: none;
-  box-sizing: border-box !important;
-  text-decoration: none !important;
-  transition: 0.2s;
+ margin: 0;
+ padding: 0;
+ outline: none !important;
+ border: none;
+ background: none;
+ box-sizing: border-box !important;
+ text-decoration: none !important;
+ transition: 0.2s;
 }
